# openenv

./: Dockerfile  PROJECT_GUIDE.md  README.md  app.py  baseline_inference.py  index.py  inference.py  openenv.yaml  prompt.txt  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_command_center.py  validate_phase2.py
scripts/: run_api_only.sh  run_hf_space.sh
server/: __main__.py  app.py
support_env/: __init__.py  environment.py  grader.py  grading_view.py  kb.py  models.py  task_graders.py  tasks.py  trajectory.py  typed_action_inputs.py  workflow_policy.py
tests/: conftest.py  test_api.py  test_environment.py  test_grader_and_state.py  test_scenario_reset.py  test_task_graders.py
